# mtg-proxies

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  vite.config.js  wrangler.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  deploy.yml
proxies_generator/: Cargo.toml
proxies_generator/src/: main.rs
scryfall/: Cargo.toml
scryfall/src/: api_classes.rs  api_interface.rs  card_images_helper.rs  collection_card_identifier.rs  deck_diff.rs  deck_formats.rs  deck_parsers.rs  fetch_card_data.rs  fetch_card_list.rs  lib.rs  reqwest_wrapper.rs  token_handling.rs  wasm_fetch_wrapper.rs
scryfall/src/api_interface/: api_classes.rs  collection_card_identifier.rs  reqwest_wrapper.rs  wasm_fetch_wrapper.rs
scryfall/src/fetch_card_data/: fetch_card_fuzzy.rs  fetch_cards_bulk.rs  fetch_deck.rs  fetch_tokens.rs  resolve_card_counts.rs
src/: generate_proxies.rs  main.rs  scryfall.rs  scryfall_interface.rs
src/scryfall/: api_classes.rs  api_interface.rs  card_list.rs  collection_card_identifier.rs  deck_formats.rs  fetch_card_list.rs
wasm_proxies/: Cargo.toml  index.html  interface.js  package-lock.json  package.json  print.css  rollup.config.js  rust-toolchain.toml  style.css  wrangler.toml
wasm_proxies/.cargo/: config.toml
wasm_proxies/assets/: index.html  interface.js  print.css  style.css
wasm_proxies/src/: generate_proxies.rs  lib.rs  logging.rs  printings.rs  user_options.rs
www/: index.html  style.css
