[package]
name = "mtg_proxies"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = { version = "2.5.4", features = ["serde"] }
url-macro = "0.2.0"
uuid = { version = "1.16.0", features = ["serde"] }
