[package]
name = "mtg_proxies"
version = "0.1.0"
edition = "2024"

[lib]
name = "scryfall"
path = "src/scryfall/lib.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = { version = "2.5.4", features = ["serde"] }
url-macro = "0.2.0"
uuid = { version = "1.16.0", features = ["serde"] }