[package]
name = "proxies_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
colog = "1.3.0"
log = "0.4.27"
scryfall = { path = "../scryfall", features = ["std"] }
tokio = { version = "1.45.1", features = ["full"] }
