[package]
name = "scryfall"
version = "0.1.0"
edition = "2024"

[dependencies]
governor = { version = "0.10.0", default-features = false, features = ["std", "dashmap", "quanta"] }
nonzero_ext = "0.3.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting", "parsing", "serde"] }
url = { version = "2.5.4", features = ["serde"] }
url-macro = "0.2.0"
uuid = { version = "1.16.0", features = ["serde"] }