[package]
name = "scryfall"
version = "0.1.0"
edition = "2024"

[dependencies]
governor = { version = "0.10.0", features = ["std", "dashmap", "quanta"], default-features = false, optional = true }
hashbrown = { version = "0.15.4", features = ["serde"] }
log = "0.4.27"
nonzero_ext = { version = "0.3.0", optional = true }
reqwest = { version = "0.12.15", features = ["json"], optional = true }
serde = { version = "1.0.219", features = ["alloc", "derive"], default-features = false }
serde_json = { version = "1.0.140", features = ["alloc"], default-features = false }
uuid = { version = "1.16.0", features = ["serde"], default-features = false }
wasm-bindgen = { version = "0.2.100", features = ["msrv"], default-features = false, optional = true }
wasm-bindgen-futures = { version = "0.4.50", default-features = false, optional = true }

[dependencies.web-sys]
version = "0.3.4"
default-features = false
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    'console',
    'Url',
    'UrlSearchParams',
]
optional = true

[features]
std = ["dep:governor", "dep:reqwest", "dep:nonzero_ext"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
