[package]
name = "wasm_proxies"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[dependencies]
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.27"
scryfall = { path = "../scryfall" }
url = "2.5.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlTextAreaElement',
    'HtmlDivElement',
    'HtmlImageElement',
    'HtmlInputElement',
]
