[package]
name = "wasm_proxies"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[dependencies]
hashbrown = "0.15.4"
log = "0.4.27"
scryfall = { path = "../scryfall", features = ["wasm"] }
talc = "4.4.3"
wasm-bindgen = { version = "0.2.100", features = ["msrv"], default-features = false }
wasm-bindgen-futures = { version = "0.4.50", default-features = false }

[dependencies.web-sys]
version = "0.3.4"
default-features = false
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlTextAreaElement',
    'HtmlDivElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'console',
]
